api-platform-stack/kubernetes/api-platform-stack/templates/api-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: { { include "api-platform-stack.fullname" . } }
  labels:
    app: { { include "api-platform-stack.labels" . | indent 4 } }
spec:
  type: { { .Values.service.type } }
  ports:
    - port: { { .Values.nginx.service.port } }
      targetPort: { { .Values.nginx.service.port } }
      procotol: TCP
  selector:
    app: { { include "api-platform-stack.fullname" . } }
